Add release notes for disabling SMTP TLS and the CF CLI 6.44.1 bump
[#164260002] [#163917495]

Signed-off-by: Huan Wang <huwang@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -14,6 +14,9 @@ New features and changes in this release:
 ](https://docs.pivotal.io/pivotalcf/opsguide/config-proxy.html).
 * Improves log error messages when alerts fail to send.
 * Adds option to disable Metrics Forwarder for PCF integration.
+* Adds support for disabling SMTP TLS. For more information, see [Configure Email Notifications](./installing.html#email_settings)
+* Maintenance update of the following product dependencies:
+    * CF CLI is now v6.44.1
 
 ### <a id="known127"></a> Known Issues
 
