Add installation information about SMTP TLS settings
[#164260002]

Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -217,6 +217,14 @@ Follow the steps below to configure settings for Event Alerts email notification
           username and password fields empty.</p>
         </td>
       </tr>
+      <tr>
+        <td><strong>SMTP Enable TLS</strong></td>
+        <td>Enable TLS connections to the STMP server.</td>
+      </tr>
+      <tr>
+        <td><strong>SMTP Skip Certificate Validation</strong></td>
+        <td>Skip hostname validation when connecting to the SMTP server with TLS.</td>
+      </tr>
     </table>
 
 1. Click **Save**.
