--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -52,3 +52,37 @@ If PCF Event Alerts is receiving frequent event notifications, you can do one or
 * Increase threshold values to supply better indicators for action.
 
 For more information about unsubscribing from alerts and increasing threshold values, see [Using PCF Event Alerts](using.html). 
+
+##<a id="t-shoot-errors"></a> Troubleshooting Errors
+
+This section provides information on how to troubleshooting specific errors or error messages.
+
+###<a id="errand"></a> Deploy PCF Event Alerts Errand Fails
+
+This problem happens when you do not have `SUPER` privileges and binary logging is enabled.
+If you do not resolve this issue, PCF Event Alerts is not deployed.
+
+####Symptom
+
+When you **Apply Changes**, you see in the Ops Manager installation pane that the **Deploy PCF Event Alerts** errand fails with the following error:
+
+```
+You do not have the SUPER privilege and 
+binary logging is enabled (you *might* want to use the less safe
+log_bin_trust_function_creators variable)
+```
+
+####Explanation
+
+For information about the above error message, 
+see [Stored Program Binary Logging](https://dev.mysql.com/doc/refman/en/stored-programs-logging.html) 
+in the open source MySQL documentation. 
+
+####Solution
+To solve this issue, do the following:
+
+  1. Drop the PCF Event Alerts database and recreate it. For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
+  2. Do one of the following:
+     * In the database, disable binary logging. For information about disabling binary logging, see [The Binary Log](https://dev.mysql.com/doc/refman/en/binary-log.html) in the open source MySQL documentation. 
+     * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log\_bin\_trust\_function\_creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation. 
+  3. In Ops Manager, **Apply Changes** with the **Deploy PCF Event Alerts** errand checked.
