--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -10,7 +10,8 @@ owner: PCF Event Alerts
 
 New features and changes in this release:
 
-* Adds support for proxy settings. For more information about configuring proxy settings, see [Configuring Proxy Settings for All Applications
+* Adds support for proxy settings. 
+For more information about configuring proxy settings, see [Configuring Proxy Settings for All Applications
 ](https://docs.pivotal.io/pivotalcf/opsguide/config-proxy.html).
 * Improves log error messages when alerts fail to send.
 * Adds option to disable Metrics Forwarder for PCF integration.
