--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -39,27 +39,28 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>1.2.6</td>
+        <td>1.2.7</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>December 7, 2018</td>
+        <td>XX XX, 2019</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>2.2.2 or later, 2.3, 2.4, and 2.5</td>
+        <td>2.1.15 and later, 2.2.2 and later, and 2.3</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>2.2, 2.3, 2.4, and 2.5</td>
+        <td>2.1, 2.2, and 2.3</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
-        <td>1.2, 1.3, and 1.4</td>
+        <td>1.3.x</td>
+
     </tr>
     <tr>
         <td>MySQL</td>
-        <td>MySQL for PCF v2 or MySQL 5.7 and later</td>
+        <td>MySQL for PCF v2 and MySQL 5.7 and later</td>
     </tr>
     <tr>
         <td>IaaS support</td>
