add 1.2.7 installing topic [#165841222]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -11,9 +11,8 @@ see [Using PCF Event Alerts](./using.html).
 You must have the following in order to install PCF Event Alerts:
 
 + PAS v2.1.x or later
-+ MySQL for PCF v2 or credentials for an external MySQL database v5.7 or later
-  <p class="note"><strong>Note:</strong> You cannot use a MariaDB database because it cannot set a <code>DATETIME</code> column to <code>CURRENT_TIMESTAMP</code>.
-  For more information, see <a href="https://jira.mariadb.org/browse/MCOL-1039"> DATE / DATETIME should support CURRENT\_TIMESTAMP</a> the MariaDB ColumnStore issues.</p>
++ MySQL for PCF v2 or credentials for an existing external MySQL database v5.7 or later.  
+  + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the PCF Event Alerts tile
 + Updated and properly configured any BOSH add-ons used in your PCF deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
@@ -105,6 +104,8 @@ follow the steps below.
 
 #### Use an External MySQL Database
 
+<p class="note warning"><strong>Warning:</strong> If your external MySQL database has binary logging enabled, the user must have <code>SUPER</code> privileges or the global variable <code>log_bin_trust_function_creators</code> must be set to <code>1</code>.</p>
+
 If you want to use an external database for PCF Event Alerts, follow the steps below.
 
 1. Click the **MySQL Settings** tab.
@@ -142,7 +143,8 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
       </tr>
       <tr>
         <td><strong>MySQL Database</strong></td>
-        <td>Enter the external MySQL database name that PCF Event Alerts will use.</td>
+        <td>Enter the external MySQL database name for PCF Event Alerts to use.
+        This database must already exist. PCF Event Alerts does not create a new database.</td>
       </tr>
       <tr>
         <td><strong>Enable MySQL TLS</strong></td>
@@ -212,14 +214,6 @@ Follow the steps below to configure settings for Event Alerts email notification
           <p class="note"><strong>Note: </strong>To connect to a SMTP server without authentication, leave the SMTP
           username and password fields empty.</p>
         </td>
-      </tr>
-      <tr>
-        <td><strong>SMTP Enable TLS</strong></td>
-        <td>Enable TLS connections to the STMP server.</td>
-      </tr>
-      <tr>
-        <td><strong>SMTP Skip Certificate Validation</strong></td>
-        <td>Skip hostname validation when connecting to the SMTP server with TLS.</td>
       </tr>
     </table>
 
