--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -16,7 +16,7 @@ For more information about configuring proxy settings, see [Configuring Proxy Se
 * Improves log error messages when alerts fail to send.
 * Adds option to disable Metrics Forwarder for PCF integration.
 * Adds support for disabling SMTP TLS. For more information, see [Configure Email Notifications](./installing.html#email_settings)
-* If you subscribed to `-all` topics, you can selectively unsubscribe from individual topics. You can also selectively subscribe to individual topics. For more information, see [Unsubscribe from Alert Topics](.using.html#unsubscribe_topics) and [Subscribe to Alert Topics](.using.html#subscribe_topics).
+* If you subscribed to `-all` topics, you can selectively unsubscribe from individual topics. You can also selectively subscribe to individual topics. For more information, see [Unsubscribe from Alert Topics](./using.html#unsubscribe_topics) and [Subscribe to Alert Topics](./using.html#subscribe_topics).
 * Maintenance update of the following product dependencies:
     * CF CLI is now v6.44.1
 
