Add 1.2.7 release date and update some 1.2.<patch> to 1.2.x
[#163829972]

Signed-off-by: Devin Brown <debrown@pivotal.io>

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -130,7 +130,7 @@ To create a webhook target, do the following:
 In order for a target to start receiving alerts, you must subscribe it to available alert topics.
 A topic is an event that is relevant to your system.
 
-<p class="note"><strong>Note:</strong> For PCF Event Alerts v1.2.1, you <strong>must</strong> have PCF Healthwatch v1.3 installed if you want to set up and subscribe to Healthwatch topics.</p>
+<p class="note"><strong>Note:</strong> For PCF Event Alerts v1.2.x, you <strong>must</strong> have PCF Healthwatch v1.3 installed if you want to set up and subscribe to Healthwatch topics.</p>
 
 To subscribe a target to one or more alert topics, do the following:
 
