--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -27,7 +27,7 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-PCF Event Alerts v1.2.3 supports PCF Healthwatch as a publisher.
+PCF Event Alerts v1.2 supports PCF Healthwatch as a publisher.
 For general information about PCF Healthwatch, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
@@ -43,20 +43,19 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>Release date</td>
-        <td>XX XX, 2019</td>
+        <td>May 30, 2019</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>2.1.15 and later, 2.2.2 and later, and 2.3</td>
+        <td>2.4 and 2.5</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>2.1, 2.2, and 2.3</td>
+        <td>2.4 and 2.5</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
-        <td>1.3.x</td>
-
+        <td>1.4 and 1.5</td>
     </tr>
     <tr>
         <td>MySQL</td>
