--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -4,7 +4,7 @@ owner: PCF Event Alerts
 ---
 ##<a id="ver-1-2-7"></a> v1.2.7
 
-**Release Date: XXX XX, 2019**
+**Release Date: May 30, 2019**
 
 ### <a id="features127"></a> Features
 
