--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -43,7 +43,7 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>Release date</td>
-        <td>XX XX, 2019</td>
+        <td>May 30, 2019</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
