--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -47,15 +47,15 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>2.1.15 and later, 2.2.2 and later, and 2.3</td>
+        <td>2.3, 2.4, and 2.5</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>2.1, 2.2, and 2.3</td>
+        <td>2.3, 2.4, and 2.5</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
-        <td>1.3.x</td>
+        <td>1.4 and 1.5</td>
 
     </tr>
     <tr>
