Fix wording around maintenance update [#165926023]
Signed-off-by: Huan Wang <huwang@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -10,7 +10,8 @@ owner: PCF Event Alerts
 
 New features and changes in this release:
 
-* Bumps CF CLI to v6.45.0
+* Maintenance update of the following product dependencies:
+    * Bumps CF CLI to v6.45.0
 
 ##<a id="ver-1-2-7"></a> v1.2.7
 
