--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -4,7 +4,7 @@ owner: PCF Event Alerts
 ---
 ##<a id="ver-1-2-8"></a> v1.2.8
 
-**Release Date: June CHANGEME, 2019**
+**Release Date: July 2, 2019**
 
 ### <a id="features128"></a> Features
 
