edit for 1.2.8 release[#166740228]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -27,7 +27,7 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-PCF Event Alerts v1.2.3 supports PCF Healthwatch as a publisher.
+PCF Event Alerts v1.2.3 and later support PCF Healthwatch as a publisher.
 For general information about PCF Healthwatch, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
@@ -39,23 +39,23 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>1.2.7</td>
+        <td>1.2.8</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>May 30, 2019</td>
+        <td>June 2, 2019</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>2.3, 2.4, and 2.5</td>
+        <td>2.3, 2.4, 2.5, and 2.6</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>2.3, 2.4, and 2.5</td>
+        <td>2.3, 2.4, 2.5, and 2.6</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
-        <td>1.4 and 1.5</td>
+        <td>1.4, 1.5, and 1.6</td>
 
     </tr>
     <tr>
