--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -16,13 +16,9 @@ New features and changes in this release:
 
 This release has the following issues:
 
-+ **Deploy PCF Event Alerts Errand Fails:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, PCF Event Alerts is not deployed. For instructions on solving this issue, 
-see [Deploy PCF Event Alerts Errand Fails](./troubleshooting.html#t-shoot-errors). 
+<%= partial 'deployfails-ki' %>
 
-* When saving the MySQL settings page with Azure-style usernames, for example,
-  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
-  Disregard this message.
-  You are still able to authenticate.
+<%= partial 'azure-usernames-ki' %>
 
 <%= partial "mariadb-ki" %>
 
@@ -48,13 +44,9 @@ For more information about configuring proxy settings, see [Configuring Proxy Se
 
 This release has the following issues:
 
-+ **Deploy PCF Event Alerts Errand Fails:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, PCF Event Alerts is not deployed. For instructions on solving this issue, 
-see [Deploy PCF Event Alerts Errand Fails](./troubleshooting.html#t-shoot-errors). 
+<%= partial 'deployfails-ki' %>
 
-* When saving the MySQL settings page with Azure-style usernames, for example,
-  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
-  Disregard this message.
-  You are still able to authenticate.
+<%= partial 'azure-usernames-ki' %>
 
 <%= partial "mariadb-ki" %>
 
@@ -75,10 +67,7 @@ New features and changes in this release:
 
 This release has the following issues:
 
-* When saving the MySQL settings page with Azure-style usernames, for example,
-  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
-  Disregard this message.
-  You are still able to authenticate.
+<%= partial 'azure-usernames-ki' %>
 
 <%= partial "mariadb-ki" %>
 
@@ -109,10 +98,7 @@ This release fixes the following issues:
 
 This release has the following issues:
 
-* When saving the MySQL settings page with Azure-style usernames, for example,
-  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
-  Disregard this message.
-  You are still able to authenticate.
+<%= partial 'azure-usernames-ki' %>
 
 <%= partial "mariadb-ki" %>
 
@@ -152,10 +138,8 @@ This release fixes the following issue:
 
 This release has the following issues:
 
-* When saving the MySQL settings page with Azure-style usernames, for example,
-  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
-  Disregard this message.
-  You are still able to authenticate.
+<%= partial 'azure-usernames-ki' %>
+
 * When using PCF Event Alerts and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database, PCF Event Alerts will not function. This issue is fixed in PCF Event Alerts v1.2.5.
 * The tile version in the tile metadata may not match the version of PCF Event Alerts. These version numbers are aligned as of PCF Event Alerts 1.2.5.
 
@@ -187,10 +171,8 @@ This release has the following issues:
 * Users of Event Alerts v1.2.1 are required to use escape characters in configuration passwords.
   This is no longer required in Event Alerts v1.2.3 and later releases.
 
-* When using an external Azure MySQL database or other databases
-  where usernames contain the `@` symbol, authentication does not work.
-  This issue is fixed in PCF Event Alerts v1.2.1.
-* When using PCF Event Alerts and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database, PCF Event Alerts will not function. This issue is fixed in PCF Event Alerts v1.2.5.
+<%= partial 'azure-usernames-ki' %>
+
 * The tile version in the tile metadata may not match the version of PCF Event Alerts. These version numbers are aligned as of PCF Event Alerts 1.2.5.
 
 <%= partial "mariadb-ki" %>
