Added last modified date to every topic [#166486938]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -3,6 +3,8 @@ title: PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
+<strong><%= modified_date %></strong>
+
 This documentation describes PCF Event Alerts.
 
 ## <a id='overview'></a>Overview
