--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -3,6 +3,8 @@ title: Installing and Configuring PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
+<strong><%= modified_date %></strong>
+
 This topic describes how to install and configure PCF Event Alerts. For information on how to use this product,
 see [Using PCF Event Alerts](./using.html).
 
