--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -2,6 +2,9 @@
 title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
+
+<strong><%= modified_date %></strong>
+
 ##<a id="ver-1-2-8"></a> v1.2.8
 
 **Release Date: July 2, 2019**
