--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -3,6 +3,8 @@ title: Monitoring and Troubleshooting PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
+<strong><%= modified_date %></strong>
+
 This topic describes how to monitor and troubleshoot Pivotal Cloud Foundry (PCF) Event Alerts.
 
 ##<a id='monitor'></a> Monitor PCF Event Alerts
@@ -12,13 +14,13 @@ PCF Event Alerts is deployed as an app in PCF. By default, this app is called `e
 To monitor the performance of PCF Event Alerts or to retrieve troubleshooting information, you can do one or more of the following:
 
 * Use the Cloud Foundry Command Line Interface (cf CLI) to obtain logs for the `event-alerts` app.
-  For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html). 
+  For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html).
 * Use the PCF Metrics service.
   For more information, see [PCF Metrics](https://docs.pivotal.io/pcf-metrics/index.html).
 * Use the Metrics Forwarder for PCF service.
   The `event-alerts` app detects if you have an available instance of Metrics Forwarder for PCF
   and transmits custom app metrics through Loggregator to the service.
-  For more information, see [Metrics Forwarder for PCF](https://docs.pivotal.io/metrics-forwarder/).  
+  For more information, see [Metrics Forwarder for PCF](https://docs.pivotal.io/metrics-forwarder/).
   <p class="note"><strong>Note:</strong> When Metrics Forwarder is not installed,
      Event Alerts produces an error.
      This indicates that no custom metrics are being published to the Firehose.
@@ -42,7 +44,7 @@ To scale PCF Event Alerts, perform the following steps:
    For example:
 	<pre class="terminal">$ cf scale event-alerts -i 2</pre>
 	If you are running very large PCF deployments with frequent threshold events,
-        you might need to increase the instance count above two. 
+        you might need to increase the instance count above two.
 
 ##<a id="reduce-notifications"></a> Reduce Notifications
 
@@ -51,7 +53,7 @@ If PCF Event Alerts is receiving frequent event notifications, you can do one or
 * Unsubscribe from alerts that have minimal action.
 * Increase threshold values to supply better indicators for action.
 
-For more information about unsubscribing from alerts and increasing threshold values, see [Using PCF Event Alerts](using.html). 
+For more information about unsubscribing from alerts and increasing threshold values, see [Using PCF Event Alerts](using.html).
 
 ##<a id="t-shoot-errors"></a> Troubleshooting Errors
 
@@ -67,22 +69,22 @@ If you do not resolve this issue, PCF Event Alerts is not deployed.
 When you **Apply Changes**, you see in the Ops Manager installation pane that the **Deploy PCF Event Alerts** errand fails with the following error:
 
 ```
-You do not have the SUPER privilege and 
+You do not have the SUPER privilege and
 binary logging is enabled (you *might* want to use the less safe
 log_bin_trust_function_creators variable)
 ```
 
 ####Explanation
 
-For information about the above error message, 
-see [Stored Program Binary Logging](https://dev.mysql.com/doc/refman/en/stored-programs-logging.html) 
-in the open source MySQL documentation. 
+For information about the above error message,
+see [Stored Program Binary Logging](https://dev.mysql.com/doc/refman/en/stored-programs-logging.html)
+in the open source MySQL documentation.
 
 ####Solution
 To solve this issue, do the following:
 
   1. Drop the PCF Event Alerts database and recreate it. For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
   2. Do one of the following:
-     * In the database, disable binary logging. For information about disabling binary logging, see [The Binary Log](https://dev.mysql.com/doc/refman/en/binary-log.html) in the open source MySQL documentation. 
-     * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log\_bin\_trust\_function\_creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation. 
+     * In the database, disable binary logging. For information about disabling binary logging, see [The Binary Log](https://dev.mysql.com/doc/refman/en/binary-log.html) in the open source MySQL documentation.
+     * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log\_bin\_trust\_function\_creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation.
   3. In Ops Manager, **Apply Changes** with the **Deploy PCF Event Alerts** errand checked.
