Added last modified date to every topic [#166486938]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -3,6 +3,8 @@ title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
+<strong><%= modified_date %></strong>
+
 These are release notes for PCF Event Alerts.
 
 ##<a id="ver-1-1-7"></a> v1.1.7
@@ -24,7 +26,7 @@ New features and changes in this release:
     `userId@serverName`, you might see an error message saying that the use of the `@` character is not supported.
     Disregard this message.
     You are still able to authenticate.
-    
+
 <%= partial "mariadb-ki" %>
 
 
@@ -48,7 +50,7 @@ New features and changes in this release:
     `userId@serverName`, you might see an error message saying that the use of the `@` character is not supported.
     Disregard this message.
     You are still able to authenticate.
-    
+
 <%= partial "mariadb-ki" %>
 
 ##<a id="ver-1-1-5"></a> v1.1.5
