--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -3,6 +3,8 @@ title: Monitoring and Troubleshooting PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
+<strong><%= modified_date %></strong>
+
 This topic describes how to monitor and troubleshoot Pivotal Cloud Foundry (PCF) Event Alerts.
 
 ##<a id='monitor'></a> Monitor PCF Event Alerts
@@ -12,13 +14,13 @@ PCF Event Alerts is deployed as an app in PCF. By default, this app is called `e
 To monitor the performance of PCF Event Alerts or to retrieve troubleshooting information, you can do one or more of the following:
 
 * Use the Cloud Foundry Command Line Interface (cf CLI) to obtain logs for the `event-alerts` app.
-  For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html). 
+  For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html).
 * Use the PCF Metrics service.
   For more information, see [PCF Metrics](https://docs.pivotal.io/pcf-metrics/index.html).
 * Use the Metrics Forwarder for PCF service.
   The `event-alerts` app detects if you have an available instance of Metrics Forwarder for PCF
   and transmits custom app metrics through Loggregator to the service.
-  For more information, see [Metrics Forwarder for PCF](https://docs.pivotal.io/metrics-forwarder/).  
+  For more information, see [Metrics Forwarder for PCF](https://docs.pivotal.io/metrics-forwarder/).
   <p class="note"><strong>Note:</strong> When Metrics Forwarder is not installed,
      Event Alerts produces an error.
      This indicates that no custom metrics are being published to the Firehose.
@@ -42,7 +44,7 @@ To scale PCF Event Alerts, perform the following steps:
    For example:
 	<pre class="terminal">$ cf scale event-alerts -i 2</pre>
 	If you are running very large PCF deployments with frequent threshold events,
-        you might need to increase the instance count above two. 
+        you might need to increase the instance count above two.
 
 ##<a id="reduce-notifications"></a> Reduce Notifications
 
@@ -51,4 +53,4 @@ If PCF Event Alerts is receiving frequent event notifications, you can do one or
 * Unsubscribe from alerts that have minimal action.
 * Increase threshold values to supply better indicators for action.
 
-For more information about unsubscribing from alerts and increasing threshold values, see [Using PCF Event Alerts](using.html). 
+For more information about unsubscribing from alerts and increasing threshold values, see [Using PCF Event Alerts](using.html).
