--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -3,7 +3,8 @@ title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-<%= modified_date %>
+<strong><%= modified_date %></strong>
+
 ##<a id="ver-1-3-0"></a> v1.3.x
 
 **Release Date: MMM XX, 2019**
@@ -16,8 +17,8 @@ New features and changes in this release:
 
 This release has the following issue:
 
-+ **Deploy PCF Event Alerts Errand Fails:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, PCF Event Alerts is not deployed. For instructions on solving this issue, 
-see [Deploy PCF Event Alerts Errand Fails](./troubleshooting.html#mysql). 
++ **Deploy PCF Event Alerts Errand Fails:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, PCF Event Alerts is not deployed. For instructions on solving this issue,
+see [Deploy PCF Event Alerts Errand Fails](./troubleshooting.html#mysql).
 
 ## <a id="view"></a> View Release Notes for Another Version
 
