update release notes to include golang bump [#167356988]
Signed-off-by: Huan Wang <huwang@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -14,6 +14,8 @@ owner: PCF Event Alerts
 New features and changes in this release:
 
 * Updates the cf CLI to v6.45.0
+* Updates the golang to v1.12
+
 
 ###<a id="known128"></a> Known Issues
 
