Adds mysql ip binding issue to known issues also fixes capitalization of MySQL in troubleshooting [#167434097]
Signed-off-by: Rob Hill <rhill@pivotal.io>

--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -90,7 +90,7 @@ To solve this issue, do the following:
      * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log\_bin\_trust\_function\_creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation.
   3. In Ops Manager, **Apply Changes** with the **Deploy PCF Event Alerts** errand checked.
 
-###<a id="ip-binding"></a> Event Alerts Fails to Release IP Binding on Mysql Upgrade
+###<a id="ip-binding"></a> Event Alerts Fails to Release IP Binding on MySQL Upgrade
 
 ####Symptom
 
