--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -27,6 +27,8 @@ This release has the following issues:
 
 <%= partial "mariadb-ki" %>
 
+<%= partial "mysql-ip-binding-ki" %>
+
 ##<a id="ver-1-2-7"></a> v1.2.7
 
 **Release Date: May 30, 2019**
@@ -55,6 +57,8 @@ This release has the following issues:
 
 <%= partial "mariadb-ki" %>
 
+<%= partial "mysql-ip-binding-ki" %>
+
 ##<a id="ver-1-2-6"></a> v1.2.6
 
 **Release Date: December 7, 2018**
@@ -75,6 +79,8 @@ This release has the following issues:
 <%= partial 'azure-usernames-ki' %>
 
 <%= partial "mariadb-ki" %>
+
+<%= partial "mysql-ip-binding-ki" %>
 
 ##<a id="ver-1-2-5"></a> v1.2.5
 
@@ -106,6 +112,8 @@ This release has the following issues:
 <%= partial 'azure-usernames-ki' %>
 
 <%= partial "mariadb-ki" %>
+
+<%= partial "mysql-ip-binding-ki" %>
 
 ##<a id="ver-1-2-3"></a> v1.2.3
 
@@ -150,6 +158,8 @@ This release has the following issues:
 
 <%= partial "mariadb-ki" %>
 
+<%= partial "mysql-ip-binding-ki" %>
+
 ##<a id="ver-1-2-1"></a> v1.2.1
 
 **Release Date: July 17, 2018**
@@ -181,6 +191,8 @@ This release has the following issues:
 * The tile version in the tile metadata might not match the version of PCF Event Alerts. These version numbers are aligned as of PCF Event Alerts v1.2.5.
 
 <%= partial "mariadb-ki" %>
+
+<%= partial "mysql-ip-binding-ki" %>
 
 ## <a id="view"></a> View Release Notes for Another Version
 
