--- a/_mysql-ip-binding-ki.html.md.erb
+++ b/_mysql-ip-binding-ki.html.md.erb
@@ -1,3 +1,3 @@
-* **Event Alerts Fails to Release IP Binding on MySQL Upgrade:** When upgrading from Pivotal MySQL 2.4.x to 2.5.x the MySQL service switches from IP bindings to hostname bindings.
-Event Alerts sometimes fails to release the IP binding when following the [documentation](https://docs.pivotal.io/p-mysql/2-5/troubleshoot.html#deprecated-service-bindings)
-for this process. Please refer to the [Troubleshooting section](./troubleshooting.html#ip-binding) for details.
+* Event Alerts sometimes fails to release IP address bindings when upgrading
+from MySQL for PCF v2.4 to v2.5.
+For troubleshooting information, see [Event Alerts Fails to Release IP Binding on Mysql Upgrade](./troubleshooting.html#ip-binding).
