--- a/_mysql-ip-binding-ki.html.md.erb
+++ b/_mysql-ip-binding-ki.html.md.erb
@@ -1,3 +1,3 @@
 * Event Alerts sometimes fails to release IP address bindings when upgrading
 from MySQL for PCF v2.4 to v2.5.
-For troubleshooting information, see [Event Alerts Fails to Release IP Binding on Mysql Upgrade](./troubleshooting.html#ip-binding).
+For troubleshooting information, see [Event Alerts Fails to Release IP Binding on MySQL Upgrade](./troubleshooting.html#ip-binding).
